tf-model-chart/unused/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tf-model-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: tf-model.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tf-model-release-service
            port:
              number: 8501
